# canoniga

./: .cursorignore  .dockerignore  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.gpu.yml  docker-compose.yml  pyproject.toml  tmp_dbg.sqlite  tmp_legacy_bootstrap.sqlite
config/: benchmark_gate_policy.json  sync_plan.all_public_sources.json  sync_plan.medium_public_sources.json  sync_plan.multilingual_als.json  sync_plan.smoke_public_sources.json
data/: als_intel.sqlite-shm  als_intel.sqlite-wal  curated_validation_report.json
docs/: ETHICS_AND_OVERSIGHT.md  HUMAN_OVERSIGHT.md  MISSION.md
examples/: arrayexpress_sample.json  chembl_sample.json  ctgov_sample.json  fda_labels_sample.json  geo_sample.json  go_sample.json  kegg_sample.json  metabolomics_workbench_sample.json  ncbi_gene_sample.json  open_targets_sample.json  pmc_sample.json  pride_sample.json  pubmed_sample.json  reactome_sample.json  sample_evidence.jsonl  sync_plan.json  uniprot_sample.json
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  tsconfig.vitest.json  vite.config.ts  vitest.config.ts
scripts/: local_trainer.sh
tests/: conftest.py  test_benchmark.py  test_benchmark_gate.py  test_benchmark_merge.py  test_benchmark_templates.py  test_benchmark_validation.py  test_causal_dashboard.py  test_claim_verification.py  test_cli.py  test_emails.py  test_evaluation.py  test_extraction_fidelity.py  test_finetune_data.py  test_graph.py  test_graph_hypothesis.py  test_i18n.py  test_landing.py  test_llm.py  (+20 more)
(+248 files in other folders)
