[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "als-intel"
version = "0.1.0"
description = "Local-first ALS scientific intelligence prototype"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
als-intel = "als_intel.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
